hotfix: delete query-inspection records if query is saved
